--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- responsive css -->
-    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
     <!--=============== navbar part end ==================-->
 
     <!--=============== banner part start ==================-->
-    <section id="banner" class="position-relative">
+    <section id="banner" class="position-relative overflow-hidden">
         <div class="banner-img position-absolute top-0 end-0 h-100">
             <img class="img-fluid w-100 h-100" src="images/banner-img.png" alt="img">
         </div>
@@ -87,12 +87,12 @@
     <section id="what">
         <div class="container">
             <div class="row justify-content-between align-items-center">
-                <div class="col-lg-5 col-xl-4">
+                <div class="col-md-5 col-lg-5 col-xl-4">
                     <div class="what-title">
-                        <h2 class="fw-normal">What is Gain the Edge?</h2>
+                        <h2 class="fw-normal mb-md-0">What is Gain The Edge?</h2>
                     </div>
                 </div>
-                <div class="col-lg-7">
+                <div class="col-md-7 col-lg-7">
                     <div class="what-text">
                         <p class="fw-normal mb-0">Gain the Edge Hockey Training is a fully online coaching program for Hockey players like you who want to take their game on the ice to the next level and give themselves the edge over their competition.</p>
                     </div>
@@ -108,20 +108,20 @@
         <div id="program" class="bg-black position-relative">
             <div class="container">
                 <div class="row position-relative z-1">
-                    <div class="col-xl-6 col-xxl-5">
+                    <div class="col-md-7 col-xl-6 col-xxl-5">
                         <div class="program-title position-relative">
-                            <h2 class="text-white col-xl-11 pe-xl-4 pe-xxl-0">Inside the program you'll get</h2>
+                            <h2 class="text-white col-xl-11 me-md-3 me-lg-0 pe-xl-4 pe-xxl-0">Inside the program you'll get</h2>
                         </div>
                     </div>
                 </div>
                 <div class="program-item position-relative z-1">
                     <div class="row justify-content-between align-items-center">
-                        <div class="col-lg-5">
+                        <div class="col-md-6 col-lg-5">
                             <div class="program-img">
                                 <img class="img-fluid w-100" src="images/program-img1.png" alt="img">
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6 col-lg-6">
                             <div class="program-text">
                                 <p class="primary-text text-white fw-light">Weekly workouts (Loaded inside an easy to use app) take the guesswork out of what to do in the gym. Whether you are working out at a gym facility, or in your basement we will help you Gain the Edge!</p>
                                 <p class="secondary-text fw-normal text-white-50 mb-4">The workouts inside the program are designed around building your bodies foundation. Hockey players need to be strong in all planes of motion. A weakness anywhere can lead to injury and/or a lag in your game. Inside this program we'll train your body in every plane to make sure that regardless of what position you play or what position your body gets placed into during a game you'll be ready!</p>
@@ -132,12 +132,12 @@
                 </div>
                 <div class="program-item position-relative z-1">
                     <div class="row justify-content-between align-items-center">
-                        <div class="col-lg-5 order-md-1">
+                        <div class="col-md-6 col-lg-5 order-md-1">
                             <div class="program-img">
                                 <img class="img-fluid w-100" src="images/program-img2.png" alt="img">
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6 col-lg-6">
                             <div class="program-text">
                                 <p class="primary-text text-white fw-light">A Nutrition Guide (Downloadable PDF) to help you learn how to fuel your body the way it needs, to help you recover after your workouts and games. To teach you a simple method to get you to meet your individual goals. Whether your goal is to gain more muscle while you get stronger and faster, or if it's to lose a little bit of fat while getting stronger and faster! Either way, you'll learn how to do it!
                                 </p>
@@ -153,12 +153,12 @@
                 </div>
                 <div class="program-item position-relative z-1">
                     <div class="row align-items-center justify-content-between">
-                        <div class="col-lg-5">
+                        <div class="col-md-6 col-lg-5">
                             <div class="program-img">
                                 <img class="img-fluid w-100" src="images/program-img3.png" alt="img">
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6 col-lg-6">
                             <div class="program-text">
                                 <p class="primary-text fw-light text-white">A weekly coaching call with me. Here we'll go over your week, how things went for you inside the gym, your nutrition, your goals moving forward and how we can improve things in your life to help you increase your performance not only on the ice but in all areas of your life.</p>
                                 <div class="list">
@@ -167,9 +167,9 @@
                                         <li class="fw-normal text-white-50 text-white">- Self Reflection</li>
                                         <li class="fw-normal text-white-50 text-white">- Time Management</li>
                                         <li class="fw-normal text-white-50 text-white">- Communication Skills- Goal Setting</li>
-                                        <li class="fw-normal text-white-50 text-white">- Self Reflection</li>
-                                        <li class="fw-normal text-white-50 text-white">- Time Management</li>
-                                        <li class="fw-normal text-white-50 text-white">- Communication Skills</li>
+                                        <li class="fw-normal text-white-50 text-white d-md-none d-lg-block">- Self Reflection</li>
+                                        <li class="fw-normal text-white-50 text-white d-md-none d-lg-block">- Time Management</li>
+                                        <li class="fw-normal text-white-50 text-white d-md-none d-lg-block">- Communication Skills</li>
                                     </ul>
                                 </div>
                                 <p class="rear-text fw-light mb-4">These calls are a great resource for you to keep pushing to be better!</p>
@@ -180,14 +180,14 @@
                 </div>
                 <div class="program-item position-relative z-1">
                     <div class="row justify-content-between align-items-center">
-                        <div class="col-lg-5 order-md-1">
+                        <div class="col-md-6 col-lg-5 order-md-1">
                             <div class="program-img">
                                 <img class="img-fluid w-100" src="images/program-img4.png" alt="img">
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6 col-lg-6">
                             <div class="program-text">
-                                <p class="primary-text text-white">Video Breakdown - Each week you’ll send a video of 1-3 shifts from your players game from the weekend or from past games that you want us to break down. We will dissect the video and give you feedback on things to fix, things that they did well and how to improve their game on both sides of the puck.</p>
+                                <p class="primary-text text-white fw-light">Video Breakdown - Each week you’ll send a video of 1-3 shifts from your players game from the weekend or from past games that you want us to break down. We will dissect the video and give you feedback on things to fix, things that they did well and how to improve their game on both sides of the puck.</p>
                                 <p class="secondary-text text-white-50 mb-4"> One of the greatest advantages of living in this day and age is the advancement in technology. Being able to relive each and every second of our games. Rewind and slow down everything to improve all tiny details of our game. Hockey IQ is such a crucial part of hockey. It doesn’t matter how good your skills are if you don’t know where to be on the ice during the play, or where to be in different situations you’ll look lost and basically be putting your team a man down every time you are out there.</p>
                                 <button class="primary-btn fw-normal text-uppercase text-white border-0 px-4">LEARN MORE</button>
                             </div>
@@ -202,7 +202,7 @@
         <div id="slider">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-5">
                         <div class="slider-title">
                             <h2 class="position-relative">Our Testimonials</h2>
                         </div>
@@ -211,17 +211,17 @@
                 <div class="slider">
                     <div class="slider-item">
                         <div class="row justify-content-between align-items-center">
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-6">
                                 <div class="slider-img">
                                     <img class="img-fluid w-100" src="images/slider-img.png" alt="img">
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 col-md-6">
                                 <div class="slider-text">
                                     <img class="img-fluid" src="images/quote.png" alt="img">
-                                    <h3 class="pt-4 col-lg-10 mb-4">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
-                                    <p class="fw-normal me-lg-4">I started working with Coach Mike March 2021 after a lack luster junior season. When we started he asked me what I wanted to accomplish over the off season. I told him I wanted to be the strongest and fastest player whenever I stepped on the ice. We started training twice a week, as well as Mike giving me things to do on my own. Over the summer I started to notice I was shooting much harder with my snap shot clocking in around 75 mph and slap shot clocking in Around 85. My skating also began to improve and when the season started I felt unstoppable. I kept going to train with Mike 1-2x/week during the season doing more maintenance work.<a href="#"> [Read More]</a></p>
-                                    <h4 class="fw-normal mb-3">Jake Meier 04</h4>
+                                    <h3 class="pt-4 pt-md-2 col-lg-10 mb-4 mb-md-2">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
+                                    <p class="fw-normal mb-md-2 me-lg-4">I started working with Coach Mike March 2021 after a lack luster junior season. When we started he asked me what I wanted to accomplish over the off season. I told him I wanted to be the strongest and fastest player whenever I stepped on the ice. We started training twice a week, as well as Mike giving me things to do on my own. Over the summer I started to notice I was shooting much harder with my snap shot clocking in around 75 mph and slap shot clocking in Around 85. My skating also began to improve and when the season started I felt unstoppable. I kept going to train with Mike 1-2x/week during the season doing more maintenance work.<a href="#"> [Read More]</a></p>
+                                    <h4 class="fw-normal mb-0 mb-lg-3">Jake Meier 04</h4>
                                     <p class="pstyle">Norwin, PA</p>
                                 </div>
                             </div>
@@ -229,17 +229,17 @@
                     </div>
                     <div class="slider-item">
                         <div class="row justify-content-between align-items-center">
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-6">
                                 <div class="slider-img">
                                     <img class="img-fluid w-100" src="images/slider-img.png" alt="img">
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 col-md-6">
                                 <div class="slider-text">
                                     <img class="img-fluid" src="images/quote.png" alt="img">
-                                    <h3 class="pt-4 col-lg-10 mb-4">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
-                                    <p class="fw-normal me-lg-4">I started working with Coach Mike March 2021 after a lack luster junior season. When we started he asked me what I wanted to accomplish over the off season. I told him I wanted to be the strongest and fastest player whenever I stepped on the ice. We started training twice a week, as well as Mike giving me things to do on my own. Over the summer I started to notice I was shooting much harder with my snap shot clocking in around 75 mph and slap shot clocking in Around 85. My skating also began to improve and when the season started I felt unstoppable. I kept going to train with Mike 1-2x/week during the season doing more maintenance work.<a href="#"> [Read More]</a></p>
-                                    <h4 class="fw-normal mb-3">Jake Meier 04</h4>
+                                    <h3 class="pt-4 pt-md-2 col-lg-10 mb-4 mb-md-2">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
+                                    <p class="fw-normal mb-md-2 me-lg-4">I started working with Coach Mike March 2021 after a lack luster junior season. When we started he asked me what I wanted to accomplish over the off season. I told him I wanted to be the strongest and fastest player whenever I stepped on the ice. We started training twice a week, as well as Mike giving me things to do on my own. Over the summer I started to notice I was shooting much harder with my snap shot clocking in around 75 mph and slap shot clocking in Around 85. My skating also began to improve and when the season started I felt unstoppable. I kept going to train with Mike 1-2x/week during the season doing more maintenance work.<a href="#"> [Read More]</a></p>
+                                    <h4 class="fw-normal mb-0 mb-lg-3">Jake Meier 04</h4>
                                     <p class="pstyle">Norwin, PA</p>
                                 </div>
                             </div>
@@ -247,15 +247,15 @@
                     </div>
                     <div class="slider-item">
                         <div class="row justify-content-between align-items-center">
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-6">
                                 <div class="slider-img">
                                     <img class="img-fluid w-100" src="images/slider-img.png" alt="img">
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 col-md-6">
                                 <div class="slider-text">
                                     <img class="img-fluid" src="images/quote.png" alt="img">
-                                    <h3 class="pt-4 col-lg-10 mb-4">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
+                                    <h3 class="pt-4 pt-md-2 col-lg-10 mb-4 mb-md-2">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
                                     <p class="fw-normal me-lg-4">I started working with Coach Mike March 2021 after a lack luster junior season. When we started he asked me what I wanted to accomplish over the off season. I told him I wanted to be the strongest and fastest player whenever I stepped on the ice. We started training twice a week, as well as Mike giving me things to do on my own. Over the summer I started to notice I was shooting much harder with my snap shot clocking in around 75 mph and slap shot clocking in Around 85. My skating also began to improve and when the season started I felt unstoppable. I kept going to train with Mike 1-2x/week during the season doing more maintenance work.<a href="#"> [Read More]</a></p>
                                     <h4 class="fw-normal mb-3">Jake Meier 04</h4>
                                     <p class="pstyle">Norwin, PA</p>
@@ -274,7 +274,7 @@
     <section id="books">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-4">
                     <div class="books-title">
                         <h2 class="text-white position-relative">Purchase E-Books</h2>
                     </div>
@@ -292,7 +292,7 @@
                     <img class="img-fluid w-100" src="images/books-slider-img.png" alt="img">
                 </div>
                 <div class="book-item me-4">
-                    <img class="img-fluid w-100" src="images/books-slider-img.png" alt="img">
+                    <img class="img-fluid w-100" src="images/books-slider-img2.png" alt="img">
                 </div>
                 <div class="book-item me-4">
                     <img class="img-fluid w-100" src="images/books-slider-img.png" alt="img">
