--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <nav class="navbar navbar-expand-lg navbar-light border-bottom border-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo"></a>
-                <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarExample-expand-xxl" aria-controls="offcanvasNavbarExample-expand-xxl">
-                    <span class="navbar-toggler-icon" data-bs-target="#offcanvasNavbarExample-expand-xxl"></span>
+                <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#sideBar" aria-controls="sideBar">
+                    <span data-bs-target="#sideBar"><img src="images/side-bar.svg" alt="sidebar"></span>
                 </button>
-                <div class="offcanvas offcanvas-start" data-bs-hideresize="true" tabindex="-1" id="offcanvasNavbarExample-expand-xxl" aria-labelledby="offcanvasNavbarExample-expand-xxlLabel">
+                <div class="offcanvas offcanvas-start bg-black" data-bs-hideresize="true" tabindex="-1" id="sideBar" aria-labelledby="sideBarLabel">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasLabel"> <a class="navbar-brand" href="#"><img src="assets/images/logo.png" width="205" height="28" class="me-3" alt="logo"></a>
+                        <h5 class="offcanvas-title" id="offcanvasLabel"> <a class="navbar-brand" href="#"><img src="images/logo.png" width="205" height="28" class="me-3 w-100" alt="logo"></a>
                         </h5>
                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
@@ -69,7 +69,7 @@
         </div>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-8">
+                <div class="col-6 col-xl-8 col-lg-10">
                     <div class="banner-text">
                         <h3 class="fw-normal mb-0">GAIN THE EDGE</h3>
                         <h1 class="fw-normal text-white">HOCKEY TRAINING</h1>
@@ -87,7 +87,7 @@
     <section id="what">
         <div class="container">
             <div class="row justify-content-between align-items-center">
-                <div class="col-md-5 col-lg-5 col-xl-4">
+                <div class="col-7 col-md-5 col-lg-5 col-xl-4">
                     <div class="what-title">
                         <h2 class="fw-normal mb-md-0">What is Gain The Edge?</h2>
                     </div>
@@ -108,8 +108,8 @@
         <div id="program" class="bg-black position-relative">
             <div class="container">
                 <div class="row position-relative z-1">
-                    <div class="col-md-7 col-xl-6 col-xxl-5">
-                        <div class="program-title position-relative">
+                    <div class="col-md-7 col-lg-6 col-xl-6 col-xxl-5">
+                        <div class="program-title position-relative me-lg-4 me-xl-0">
                             <h2 class="text-white col-xl-11 me-md-3 me-lg-0 pe-xl-4 pe-xxl-0">Inside the program you'll get</h2>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-6">
-                            <div class="program-text">
+                            <div class="program-text pt-4 pt-md-0">
                                 <p class="primary-text text-white fw-light">Weekly workouts (Loaded inside an easy to use app) take the guesswork out of what to do in the gym. Whether you are working out at a gym facility, or in your basement we will help you Gain the Edge!</p>
                                 <p class="secondary-text fw-normal text-white-50 mb-4">The workouts inside the program are designed around building your bodies foundation. Hockey players need to be strong in all planes of motion. A weakness anywhere can lead to injury and/or a lag in your game. Inside this program we'll train your body in every plane to make sure that regardless of what position you play or what position your body gets placed into during a game you'll be ready!</p>
                                 <button class="primary-btn fw-normal text-uppercase text-white border-0 px-4">LEARN MORE</button>
@@ -138,7 +138,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-6">
-                            <div class="program-text">
+                            <div class="program-text pt-4 pt-md-0">
                                 <p class="primary-text text-white fw-light">A Nutrition Guide (Downloadable PDF) to help you learn how to fuel your body the way it needs, to help you recover after your workouts and games. To teach you a simple method to get you to meet your individual goals. Whether your goal is to gain more muscle while you get stronger and faster, or if it's to lose a little bit of fat while getting stronger and faster! Either way, you'll learn how to do it!
                                 </p>
                                 <p class="primary-text text-white fw-light">Learning the basics of Nutrition will not only set you up on the Ice and the weight room but it will set you up for a healthier life !
@@ -148,7 +148,6 @@
                                 <button class="primary-btn fw-normal text-uppercase text-white border-0 px-4">LEARN MORE</button>
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="program-item position-relative z-1">
@@ -159,7 +158,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-6">
-                            <div class="program-text">
+                            <div class="program-text pt-4 pt-lg-0">
                                 <p class="primary-text fw-light text-white">A weekly coaching call with me. Here we'll go over your week, how things went for you inside the gym, your nutrition, your goals moving forward and how we can improve things in your life to help you increase your performance not only on the ice but in all areas of your life.</p>
                                 <div class="list">
                                     <ul>
@@ -186,7 +185,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-6">
-                            <div class="program-text">
+                            <div class="program-text pt-4 pt-lg-0">
                                 <p class="primary-text text-white fw-light">Video Breakdown - Each week you’ll send a video of 1-3 shifts from your players game from the weekend or from past games that you want us to break down. We will dissect the video and give you feedback on things to fix, things that they did well and how to improve their game on both sides of the puck.</p>
                                 <p class="secondary-text text-white-50 mb-4"> One of the greatest advantages of living in this day and age is the advancement in technology. Being able to relive each and every second of our games. Rewind and slow down everything to improve all tiny details of our game. Hockey IQ is such a crucial part of hockey. It doesn’t matter how good your skills are if you don’t know where to be on the ice during the play, or where to be in different situations you’ll look lost and basically be putting your team a man down every time you are out there.</p>
                                 <button class="primary-btn fw-normal text-uppercase text-white border-0 px-4">LEARN MORE</button>
@@ -217,9 +216,9 @@
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
-                                <div class="slider-text">
+                                <div class="slider-text pt-4 pt-md-0">
                                     <img class="img-fluid" src="images/quote.png" alt="img">
-                                    <h3 class="pt-4 pt-md-2 col-lg-10 mb-4 mb-md-2">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
+                                    <h3 class="my-2 my-lg-4 col-lg-10">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
                                     <p class="fw-normal mb-md-2 me-lg-4">I started working with Coach Mike March 2021 after a lack luster junior season. When we started he asked me what I wanted to accomplish over the off season. I told him I wanted to be the strongest and fastest player whenever I stepped on the ice. We started training twice a week, as well as Mike giving me things to do on my own. Over the summer I started to notice I was shooting much harder with my snap shot clocking in around 75 mph and slap shot clocking in Around 85. My skating also began to improve and when the season started I felt unstoppable. I kept going to train with Mike 1-2x/week during the season doing more maintenance work.<a href="#"> [Read More]</a></p>
                                     <h4 class="fw-normal mb-0 mb-lg-3">Jake Meier 04</h4>
                                     <p class="pstyle">Norwin, PA</p>
@@ -235,7 +234,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
-                                <div class="slider-text">
+                                <div class="slider-text pt-4 pt-md-0">
                                     <img class="img-fluid" src="images/quote.png" alt="img">
                                     <h3 class="pt-4 pt-md-2 col-lg-10 mb-4 mb-md-2">Pittsburgh Vengenace USPHL Premier Norwin High School Varsity West Virginia University D2</h3>
                                     <p class="fw-normal mb-md-2 me-lg-4">I started working with Coach Mike March 2021 after a lack luster junior season. When we started he asked me what I wanted to accomplish over the off season. I told him I wanted to be the strongest and fastest player whenever I stepped on the ice. We started training twice a week, as well as Mike giving me things to do on my own. Over the summer I started to notice I was shooting much harder with my snap shot clocking in around 75 mph and slap shot clocking in Around 85. My skating also began to improve and when the season started I felt unstoppable. I kept going to train with Mike 1-2x/week during the season doing more maintenance work.<a href="#"> [Read More]</a></p>
@@ -291,8 +290,8 @@
                 <div class="book-item me-4">
                     <img class="img-fluid w-100" src="images/books-slider-img.png" alt="img">
                 </div>
-                <div class="book-item me-4">
-                    <img class="img-fluid w-100" src="images/books-slider-img2.png" alt="img">
+                <div class="book-item me-4 h-100">
+                    <img class="img-fluid w-100 h-100" src="images/books-slider-img2.png" alt="img">
                 </div>
                 <div class="book-item me-4">
                     <img class="img-fluid w-100" src="images/books-slider-img.png" alt="img">
@@ -317,7 +316,7 @@
             <div class="position-relative subscribe-content">
                 <div class="subscribe position-absolute w-100 ">
                     <div class="row align-items-center">
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-7 order-1 order-md-0">
                             <h3 class="mb-3">Subscribe to our Newsletter!</h3>
                             <p class="secondary-text mb-4">Subscribe to your newsletter to receive exclusive offers, latest news and updates</p>
                             <form>
@@ -326,13 +325,13 @@
                                     <input class="control-form w-50 px-4" type="text" name="last-name" placeholder="Last Name" id="last-name">
                                 </div>
                                 <input class="control-form w-100 px-4 mb-2" type="emain" name="email" placeholder="Enter Your Email Address" id="email">
-                                <div class="mt-4">
+                                <div class="mt-4 text-center text-md-start">
                                     <button class="primary-btn fw-normal text-uppercase text-white border-0 px-3">SUBSCRIBE</button>
                                 </div>
                             </form>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="subscribe-img text-end">
+                        <div class="col-lg-6 col-md-5 order-0 order-md-1">
+                            <div class="subscribe-img text-md-end text-center mb-3 mb-md-0">
                                 <img class="img-fluid" src="images/form-img.png" alt="img">
                             </div>
                         </div>
@@ -341,19 +340,19 @@
             </div>
             <div class="pt-4">
                 <div class="row align-items-end py-5">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-5">
                         <div class="contact-hadding">
                             <h4 class="fw-light text-white mb-0">HOCKEY TRAINING</h4>
-                            <h2 class="text-white mb-0 fw-light">GAIN THE EDGE</h2>
+                            <h2 class="text-white mb-0 fw-light pt-3 pt-md-0">GAIN THE EDGE</h2>
                         </div>
                     </div>
-                    <div class="col-lg-3">
-                        <div class="contact-text">
-                            <p class="secondary-text text-white-50 mb-2">brought to you by Robinson Elite Performance</p>
+                    <div class="col-lg-3 col-md-4">
+                        <div class="contact-text pt-3 pt-md-0">
+                            <p class="secondary-text text-white-50 mb-2 mb-md-0">brought to you by Robinson Elite Performance</p>
                         </div>
                     </div>
-                    <div class="col-lg-5">
-                        <div class="contact-btn text-end">
+                    <div class="col-lg-5 col-md-3">
+                        <div class="contact-btn text-start text-md-end pt-3 pt-md-0">
                             <button class="primary-btn fw-normal text-uppercase text-white border-0 px-3">CONTACT US</button>
                         </div>
                     </div>
@@ -368,19 +367,19 @@
         <div class="container">
             <div class="footer-copyright">
                 <div class="row align-items-center">
-                    <div class="col-lg-4">
-                        <div class="icon">
+                    <div class="col-lg-4 col-md-3">
+                        <div class="icon text-center text-md-start mb-3 mb-md-0">
                             <a class="me-2" href="#"><i class="fa-brands fa-facebook-f text-white"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram text-white"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="footer-text text-center">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="footer-text text-center mb-3 mb-md-0">
                             <small class="text-white-50 fw-light">©2022 by ROBINSON ELITE PERFORMANCE</small>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="footer-number text-end">
+                    <div class="col-lg-4 col-md-3">
+                        <div class="footer-number text-md-end text-center">
                             <p class="text-white fw-normal mb-0">814-823-1939</p>
                         </div>
                     </div>
