changes the ebook background img

--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
     <!--=========== program-testmonial part end============= -->
 
     <!--=============== books part start ==================-->
-    <section id="books">
+    <section id="books" class="position-relative">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-4">
-                    <div class="books-title">
+                    <div class="books-title position-relative z-1">
                         <h2 class="text-white position-relative">Purchase E-Books</h2>
                     </div>
                 </div>
