--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROBINSON ELITE PERFORMANCE | HOCKEY TRAINING</title>
 
-    <link rel="icon" href="/images/main-logo.png">
+    <link rel="icon" href="./images/main-logo.io">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Oswald:wght@200;300;400;500;600;700&family=Viga&display=swap" rel="stylesheet">
     <!-- bootstrap css -->
