--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <!-- seo meta tag -->
     <title>ROBINSON ELITE PERFORMANCE | HOCKEY TRAINING</title>
+
+    <meta name="description" content="Gain the Edge Hockey Training is a fully online coaching program for Hockey players like you who want to take their game on the ice to the next level and give themselves the edge over their competition.">
+    <meta name="keywords" content="eSports, Hockey, Hockey Training, Hockey players, E-Books, Image Tagging, Contact Us">
+    <meta name="author" content="ROBINSON ELITE PERFORMANCE">
+    <!-- seo meta tag -->
+
+    <!-- Meta information - for search engines -->
+    <meta property="og:title" content="Gain the edge | Hockey Training | E-Books Website" />
+    <meta property="og:type" content="Hockey Training and eSports Website" />
+    <meta property="og:url" content="https://www.robinsoneliteperformance.com" />
+    <!-- Meta information - for search engines -->
+
 
     <link rel="icon" href="./images/main-logo.io">
     <!-- google fonts -->
@@ -70,12 +85,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-6 col-xl-8 col-lg-10">
-                    <div class="banner-text">
-                        <h3 class="fw-normal mb-0">GAIN THE EDGE</h3>
-                        <h1 class="fw-normal text-white">HOCKEY TRAINING</h1>
-                    </div>
-                    <div class="banner-btn pt-3">
-                        <button class="primary-btn fw-normal text-uppercase text-white border-0 px-4">explore more</button>
+                    <div class="banner-content">
+                        <div class="banner-text">
+                            <h3 class="fw-normal mb-0">GAIN THE EDGE</h3>
+                            <h1 class="fw-normal text-white">HOCKEY TRAINING</h1>
+                        </div>
+                        <div class="banner-btn pt-3">
+                            <button class="primary-btn fw-normal text-uppercase text-white border-0 px-4">explore more</button>
+                        </div>
                     </div>
                 </div>
             </div>
