--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <!-- seo meta tag -->
+    <!-- meta tag -->
     <title>ROBINSON ELITE PERFORMANCE | HOCKEY TRAINING</title>
 
     <meta name="description" content="Gain the Edge Hockey Training is a fully online coaching program for Hockey players like you who want to take their game on the ice to the next level and give themselves the edge over their competition.">
     <meta name="keywords" content="eSports, Hockey, Hockey Training, Hockey players, E-Books, Image Tagging, Contact Us">
     <meta name="author" content="ROBINSON ELITE PERFORMANCE">
-    <!-- seo meta tag -->
+    <!-- meta tag -->
 
     <!-- Meta information - for search engines -->
     <meta property="og:title" content="Gain the edge | Hockey Training | E-Books Website" />
