--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Meta information - for search engines -->
     <meta property="og:title" content="Gain the edge | Hockey Training | E-Books Website" />
     <meta property="og:type" content="Hockey Training and eSports Website" />
-    <meta property="og:url" content="https://www.robinsoneliteperformance.com" />
+    <meta property="og:url" content="https://www.example.com" />
     <!-- Meta information - for search engines -->
 
 
