--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://www.example.com" />
     <!-- Meta information - for search engines -->
 
-    
+
     <link rel="icon" href="./images/main-logo.io">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Oswald:wght@200;300;400;500;600;700&family=Viga&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
 
 <body>
     <!--=============== navbar part start ==================-->
-    <section id="navigation">
+    <section id="navigation" class="position-fixed w-100 z-3">
         <nav class="navbar navbar-expand-lg navbar-light border-bottom border-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo"></a>
@@ -54,16 +54,16 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav align-items-center ms-auto">
                             <li class="nav-item px-1">
-                                <a class="nav-link fw-light text-uppercase" href="#">what is?</a>
+                                <a class="nav-link fw-light text-uppercase" href="#what">what is?</a>
                             </li>
                             <li class="nav-item px-1">
-                                <a class="nav-link fw-light text-uppercase" href="#">testimonials</a>
+                                <a class="nav-link fw-light text-uppercase" href="#slider">testimonials</a>
                             </li>
                             <li class="nav-item px-1">
-                                <a class="nav-link fw-light text-uppercase" href="#">shopping</a>
+                                <a class="nav-link fw-light text-uppercase" href="#books">shopping</a>
                             </li>
                             <li class="nav-item px-1 me-xl-5">
-                                <a class="nav-link fw-light text-uppercase" href="#">newsletter</a>
+                                <a class="nav-link fw-light text-uppercase" href="#subscribe">newsletter</a>
                             </li>
                             <li class="nav-item">
                                 <button class="primary-btn fw-normal text-uppercase text-white border-0" href="#">contact us</button>
@@ -77,20 +77,22 @@
     <!--=============== navbar part end ==================-->
 
     <!--=============== banner part start ==================-->
-    <section id="banner" class="position-relative overflow-hidden">
-        <div class="banner-img position-absolute top-0 end-0 h-100">
-            <img class="img-fluid w-100 h-100" src="images/banner-img.png" alt="img">
-        </div>
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-6 col-xl-8 col-lg-10">
-                    <div class="banner-content">
-                        <div class="banner-text">
-                            <h3 class="fw-normal mb-0">GAIN THE EDGE</h3>
-                            <h1 class="fw-normal text-white">HOCKEY TRAINING</h1>
-                        </div>
-                        <div class="banner-btn pt-3">
-                            <button class="primary-btn fw-normal text-uppercase text-white border-0 px-4">explore more</button>
+    <section id="banner">
+        <div class="banner-content position-relative overflow-hidden">
+            <div class="banner-img position-absolute top-0 end-0 h-100">
+                <img class="img-fluid w-100 h-100" src="images/banner-img.png" alt="img">
+            </div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-6 col-xl-8 col-lg-10">
+                        <div class="banner-item">
+                            <div class="banner-text">
+                                <h3 class="fw-normal mb-0">GAIN THE EDGE</h3>
+                                <h1 class="fw-normal text-white">HOCKEY TRAINING</h1>
+                            </div>
+                            <div class="banner-btn pt-3">
+                                <button class="primary-btn fw-normal text-uppercase text-white border-0 px-4">explore more</button>
+                            </div>
                         </div>
                     </div>
                 </div>
